@@ -1,19 +1,19 @@
 include ../packages.mk
 
 PACKAGE=flex
-VERSION=2.5.37
+VERSION=2.5.35
+# Wait untill gputils 1.30 with fixed patch "#270 Gputils doesn't compile with newer versions of bison and flex" is released
+#VERSION=2.5.37
 PACKAGE_FILE=$(PACKAGE)-$(VERSION).tar.bz2
 
 PACKAGE_DIR=$(PACKAGE)-$(VERSION)
 
-.PHONY: all
-all: $(PACKAGE)-install.tag clean
+all: do-all
 
 download/$(PACKAGE_FILE):
-	wget -P download http://sourceforge.net/projects/flex/files/$(PACKAGE)/$(PACKAGE)-$(VERSION)/$(PACKAGE_FILE)
+	wget -P download http://sourceforge.net/projects/flex/files/$(PACKAGE_FILE)
 
-$(PACKAGE)-unpack.tag: download/$(PACKAGE_FILE)
-	tar xjvf download/$(PACKAGE_FILE)
+$(PACKAGE)-unpack.tag: unpack-downloaded-package
 	touch $@
 
 $(PACKAGE)-configure.tag: $(PACKAGE)-unpack.tag
@@ -29,5 +29,4 @@ $(PACKAGE)-install.tag: $(PACKAGE)-make.tag
 	$(MAKE) -C $(PACKAGE_DIR) install
 	touch $@
 
-clean:
-	rm -rf $(PACKAGE_DIR) *.tag
+include ../common_deps.mk
