@@ -10,14 +10,12 @@ PACKAGE_FILE=$(PACKAGE)-$(VERSION).tar.bz2
 
 PACKAGE_DIR=$(PACKAGE)-$(VERSION)
 
-.PHONY: all
-all: $(PACKAGE)-install.tag clean
+all: do-all
 
 download/$(PACKAGE_FILE):
 	wget -P download http://panthema.net/2007/$(PACKAGE)/$(PACKAGE_FILE)
 
-$(PACKAGE)-unpack.tag: download/$(PACKAGE_FILE)
-	tar xjvf download/$(PACKAGE_FILE)
+$(PACKAGE)-unpack.tag: unpack-downloaded-package
 	touch $@
 
 $(PACKAGE)-configure.tag: $(PACKAGE)-unpack.tag
@@ -33,5 +31,4 @@ $(PACKAGE)-install.tag: $(PACKAGE)-make.tag
 	make install
 	touch $@
 
-clean:
-	rm -rf $(PACKAGE_DIR) *.tag
+include../common_deps.mk
